# sa-proto1

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  datapublish.ipynb  main.py  pyproject.toml  requirements.txt
.github/workflows/: build-and-deploy.yaml
scripts/config/: __init__.py  logging.py
scripts/constants/: __init__.py  logger_conf.yml
scripts/core/db/: redis_connections.py
scripts/core/db/mongo/: __init__.py
scripts/core/db/mongo/collections/: users.py
scripts/core/handlers/: ai_convo_handler.py
scripts/core/schemas/: __init__.py  pg_models.py
scripts/core/services/: __init__.py  auth_services.py  job_services.py  organisation_services.py
scripts/security/: __init__.py  jwt_utils.py
scripts/utils/: mongo_utils.py
